--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Nekopost.net</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+<p>search textbox</p>
+<input type="text" id="search_text">
 </body>
 </html>
